@@ -331,7 +331,7 @@ public class GremlinTranslatorTest {
                             "g.with('x', 1.0g)",
                             "g.with(\"x\", new BigDecimal(\"1.0\"))",
                             "g.with_(\"x\", 1.0)",
-                            "g.with_('x', 1.0)"},
+                            "g.with_('x', bigdecimal(1.0))"},
                     {"g.with('x', -1.0m)",
                             null,
                             "g.with(string0, bigdecimal0)",
@@ -340,7 +340,7 @@ public class GremlinTranslatorTest {
                             "g.with('x', -1.0g)",
                             "g.with(\"x\", new BigDecimal(\"-1.0\"))",
                             "g.with_(\"x\", -1.0)",
-                            "g.with_('x', -1.0)"},
+                            "g.with_('x', bigdecimal(-1.0))"},
                     {"g.with('x', -1.0M)",
                             "g.with('x', -1.0m)",
                             "g.with(string0, bigdecimal0)",
@@ -349,7 +349,7 @@ public class GremlinTranslatorTest {
                             "g.with('x', -1.0g)",
                             "g.with(\"x\", new BigDecimal(\"-1.0\"))",
                             "g.with_(\"x\", -1.0)",
-                            "g.with_('x', -1.0)"},
+                            "g.with_('x', bigdecimal(-1.0))"},
                     {"g.with('x', 1b)",
                             null,
                             "g.with(string0, byte0)",
